# gemini-api-oneclick

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.worker.yml  gateway.py  pyproject.toml
.github/workflows/: ci.yml
app/: client.py  main.py  raw_capture_tracer.py  slot.py  worker.py  worker_events.py
app/parsers/: __init__.py  chat.py  images.py  raw_capture.py  videos.py
envs/: account.env.example
lib/gemini_webapi/: __init__.py  client.py  constants.py  tracer.py
lib/gemini_webapi/components/: __init__.py  research_mixin.py
lib/gemini_webapi/types/: __init__.py  availablemodel.py  candidate.py  chathistory.py  chatinfo.py  modeloutput.py  research.py  researchresult.py  video.py
lib/gemini_webapi/utils/: __init__.py
ops/: channel_guard.py  install_cron.sh
scripts/: diff-gemini-webapi.sh  generate_compose.py  healthcheck.sh  install.sh  manage.sh  refresh-gemini-webapi-upstream.sh  safe-deploy.sh  uninstall.sh
sillytavern-extension/: index.js  style.css
tools/: probe_headers.py  probe_tokens.py
web/: cookie-manager.py  gateway.html  index.html
