[project]
name = "gemini-api-oneclick"
version = "2.0.0"
description = "One-click deployable multi-account Gemini API gateway"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0.0",
  "httpx[http2]>=0.27.0",
  "curl_cffi>=0.9.0",
  "loguru~=0.7.3",
  "orjson~=3.11.7",
]
